<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/preferenceButton"
        android:layout_width="224dp"
        android:layout_height="49dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="80dp"
        android:text="@string/preferences_button"
        app:backgroundTint="#76D4FD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/profile_Picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="224dp"
        android:layout_height="49dp"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="16dp"
        android:text="@string/editProfile_button"
        app:backgroundTint="#76D4FD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="224dp"
        android:layout_height="49dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="84dp"
        android:text="@string/home_button"
        app:backgroundTint="#76D4FD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayEmail" />

    <TextView
        android:id="@+id/displayUsername"
        android:layout_width="225dp"
        android:layout_height="31dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture" />

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="225dp"
        android:layout_height="31dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayUsername" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="225dp"
        android:layout_height="31dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="144dp" />

</androidx.constraintlayout.widget.ConstraintLayout>