...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"></TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:singleLine="true"
            android:textSize="16sp"></EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:textSize="16sp"></TextView>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            app:backgroundTint="#4CAF50"></Button>

...
