...
            android:id="@+id/profileMenubox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/profileMenu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/white_rect"
            android:contentDescription="@string/app_name"
            android:padding="6dp"
            app:srcCompat="@drawable/logout_ic" />
...
